--- a/.github/workflows/dre-release.yaml
+++ b/.github/workflows/dre-release.yaml
@@ -2,36 +2,33 @@ name: Release DRE binary
 on:
   push:
     tags:
-      - "v*"
-    branches:
-      - nim-fixing-cross-compile
-    
+      - "v*"    
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
-  # test:
-  #   runs-on:
-  #     labels: dre-runner-custom
-  #   container: ghcr.io/dfinity/dre/actions-runner:6413f2909a49329ecbf5371ee7ddf07a9799b625
-  #   steps:
-  #     - uses: actions/checkout@v4
+  test:
+    runs-on:
+      labels: dre-runner-custom
+    container: ghcr.io/dfinity/dre/actions-runner:6413f2909a49329ecbf5371ee7ddf07a9799b625
+    steps:
+      - uses: actions/checkout@v4
 
-  #     - name: "☁️ Setup runner"
-  #       uses: ./.github/workflows/manage-runner-pre
+      - name: "☁️ Setup runner"
+        uses: ./.github/workflows/manage-runner-pre
 
-  #     - name: "🚀 Testing"
-  #       env:
-  #         STAGING_PRIVATE_KEY_PEM: "${{ secrets.STAGING_PRIVATE_KEY_PEM }}"
-  #       run: |
-  #         mkdir -p ~/.config/dfx/identity/bootstrap-super-leader/
-  #         echo $STAGING_PRIVATE_KEY_PEM > ~/.config/dfx/identity/bootstrap-super-leader/identity.pem
-  #         bazel test //rs/cli:unit_test --spawn_strategy=local --test_env=HOME=/home/runner
+      - name: "🚀 Testing"
+        env:
+          STAGING_PRIVATE_KEY_PEM: "${{ secrets.STAGING_PRIVATE_KEY_PEM }}"
+        run: |
+          mkdir -p ~/.config/dfx/identity/bootstrap-super-leader/
+          echo $STAGING_PRIVATE_KEY_PEM > ~/.config/dfx/identity/bootstrap-super-leader/identity.pem
+          bazel test //rs/cli:unit_test --spawn_strategy=local --test_env=HOME=/home/runner
 
   release:
-    # needs: [test]
+    needs: [test]
     runs-on:
       labels: dre-runner-custom
     container: ghcr.io/dfinity/dre/actions-runner:6413f2909a49329ecbf5371ee7ddf07a9799b625
@@ -62,12 +59,11 @@ jobs:
         shell: bash
         id: tag
         run: |
-          # TAG=${GITHUB_REF#refs/tags/}
-          # if [[ $TAG == refs/* ]]; then
-          #   echo "Invalid value for tag $TAG"
-          #   exit 1
-          # fi
-          TAG="v0.6.5"
+          TAG=${GITHUB_REF#refs/tags/}
+          if [[ $TAG == refs/* ]]; then
+            echo "Invalid value for tag $TAG"
+            exit 1
+          fi
 
           echo "Will be using tag $TAG"
           echo "tag=$TAG" >> $GITHUB_OUTPUT
@@ -91,8 +87,7 @@ jobs:
           cp target/x86_64-apple-darwin/release/dre release/artifacts/dre-x86_64-apple-darwin
           cp target/aarch64-apple-darwin/release/dre release/artifacts/dre-aarch64-apple-darwin
 
-          # git cliff --current --sort newest > release/CHANGELOG.md
-          echo "Testing mostly" > release/CHANGELOG.md
+          git cliff --current --sort newest > release/CHANGELOG.md
 
       - name: "🆕 📢 Prepare release"
         # v0.1.15
