--- a/release-index.yaml
+++ b/release-index.yaml
@@ -8,6 +8,10 @@
 #         rc_name: <reference RC name>
 #         name: <version name>
 releases:
+  - rc_name: rc--2025-07-31_03-32
+    versions:
+      - name: base
+        version: 21a02f483fa8028568f4c2c5920ec960c87269c0
   - rc_name: rc--2025-07-24_03-31
     versions:
       - name: base
