--- a/release-index.yaml
+++ b/release-index.yaml
@@ -8,6 +8,10 @@
 #         rc_name: <reference RC name>
 #         name: <version name>
 releases:
+  - rc_name: rc--2025-08-14_03-27
+    versions:
+      - name: base
+        version: 1db8f933fdadc81a90e7db2389b081e21263a9b6
   - rc_name: rc--2025-08-07_03-33
     versions:
       - name: base
