--- a/release-index.yaml
+++ b/release-index.yaml
@@ -8,6 +8,13 @@
 #         rc_name: <reference RC name>
 #         name: <version name>
 releases:
+  - rc_name: rc--2025-08-21_03-19
+    versions:
+      - name: base
+        version: f7b2fdb7deb1758622f9c8e282d09ab8813aac62
+      - # Release pipeline for this feature: https://github.com/dfinity/ic/actions/runs/17127658482
+        name: snapshot-feature
+        version: 6da8a235a001cab5475769a7df0b0f54e7b80494
   - rc_name: rc--2025-08-14_03-27
     versions:
       - name: base
