--- a/release-index.yaml
+++ b/release-index.yaml
@@ -1,5 +1,5 @@
 # Documentation: https://dfinity.github.io/dre/release.html#release-index-reference
-# 
+#
 # Flags and options:
 # - Use 'security_fix: true' to mark security hotfixes.
 # - To override changelog base selection, add a 'changelog_base' dictionary to a version:
@@ -8,6 +8,27 @@
 #         rc_name: <reference RC name>
 #         name: <version name>
 releases:
+  - rc_name: rc--2025-09-04_03-11
+    versions:
+      - name: base
+        version: 9152ba15ab6cc3c12eb407e13f8ee483a1d5723c
+      - name: snapshot-downloads
+        version: c6d90cb33f3d47f808aaaf227a1678cb812d74a2
+      - name: inmem-canister-sks
+        version: ab62c6ec1c3b5f492df53c05bb0bf5f2eb6298ba
+  - rc_name: rc--2025-08-28_03-17
+    versions:
+      - name: base
+        version: 84a268e93a909a6827d76ad794411b161c839a12
+      - name: snapshot-feature
+        version: 91732387a03c7c82bdaea6f78d7f8321cc8cb559
+  - rc_name: rc--2025-08-21_03-19
+    versions:
+      - name: base
+        version: f7b2fdb7deb1758622f9c8e282d09ab8813aac62
+      - # Release pipeline for this feature: https://github.com/dfinity/ic/actions/runs/17127658482
+        name: snapshot-feature
+        version: 6da8a235a001cab5475769a7df0b0f54e7b80494
   - rc_name: rc--2025-08-14_03-27
     versions:
       - name: base
