--- a/rs/dre-canisters/Cargo.toml
+++ b/rs/dre-canisters/Cargo.toml
@@ -1,8 +1,6 @@
 [workspace]
 members = [
-    "node-provider-rewards/canister",
-    "node-provider-rewards/canister/api",
-    "node-provider-rewards/rewards-calculation-deprecated",
+    "node-provider-rewards-staging/canister",
 ]
 
 resolver = "2"
@@ -16,24 +14,13 @@ documentation = "https://github.com/dfinity/dre/"
 license = "Apache-2.0"
 
 [workspace.dependencies]
-async-trait = "0.1.88"
-candid = "0.10.14"
-chrono = { version = "0.4.41", features = ["serde"] }
-ic-base-types = { git = "https://github.com/dfinity/ic.git", rev = "d41938ae3173bb11f091ab8a4856e0e3a9e7ae8d" }
-ic-registry-keys = { git = "https://github.com/dfinity/ic.git", rev = "d41938ae3173bb11f091ab8a4856e0e3a9e7ae8d" }
-ic-http-types = { git = "https://github.com/dfinity/ic.git", rev = "d41938ae3173bb11f091ab8a4856e0e3a9e7ae8d" }
-ic-nervous-system-canisters = { git = "https://github.com/dfinity/ic.git", rev = "d41938ae3173bb11f091ab8a4856e0e3a9e7ae8d" }
-ic-nervous-system-common = { git = "https://github.com/dfinity/ic.git", rev = "d41938ae3173bb11f091ab8a4856e0e3a9e7ae8d" }
-ic-nervous-system-proto = { git = "https://github.com/dfinity/ic.git", rev = "d41938ae3173bb11f091ab8a4856e0e3a9e7ae8d" }
-ic-node-rewards-canister = { git = "https://github.com/dfinity/ic.git", rev = "d41938ae3173bb11f091ab8a4856e0e3a9e7ae8d" }
-ic-node-rewards-canister-api = { git = "https://github.com/dfinity/ic.git", rev = "d41938ae3173bb11f091ab8a4856e0e3a9e7ae8d" }
-ic-node-rewards-canister-protobuf = { git = "https://github.com/dfinity/ic.git", rev = "d41938ae3173bb11f091ab8a4856e0e3a9e7ae8d" }
-ic-protobuf = { git = "https://github.com/dfinity/ic.git", rev = "d41938ae3173bb11f091ab8a4856e0e3a9e7ae8d" }
-ic-registry-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "d41938ae3173bb11f091ab8a4856e0e3a9e7ae8d" }
-ic-types = { git = "https://github.com/dfinity/ic.git", rev = "d41938ae3173bb11f091ab8a4856e0e3a9e7ae8d" }
-rewards-calculation = { git = "https://github.com/dfinity/ic.git", rev = "d41938ae3173bb11f091ab8a4856e0e3a9e7ae8d" }
-ic-dummy-getrandom-for-wasm = { git = "https://github.com/dfinity/ic.git", rev = "d41938ae3173bb11f091ab8a4856e0e3a9e7ae8d" }
+ic-nervous-system-canisters = {  path = "../../../../../pietro.di.marco/RustroverProjects/ic/rs/nervous_system/canisters" }
+ic-node-rewards-canister = { path = "../../../../../pietro.di.marco/RustroverProjects/ic/rs/node_rewards/canister" }
+ic-node-rewards-canister-api = {  path = "../../../../../pietro.di.marco/RustroverProjects/ic/rs/node_rewards/canister/api" }
+ic-registry-canister-client = {  path = "../../../../../pietro.di.marco/RustroverProjects/ic/rs/registry/canister-client" }
+ic-nervous-system-timer-task = {  path = "../../../../../pietro.di.marco/RustroverProjects/ic/rs/nervous_system/timer_task" }
 
+candid = "0.10.14"
 itertools = "0.13.0"
 prost = "0.13"
 rust_decimal = "1.37.2"
