--- a/rs/dre-canisters/node-provider-rewards-staging/canister/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards-staging/canister/Cargo.toml
@@ -11,28 +11,13 @@ license.workspace = true
 crate-type = ["cdylib"]
 
 [dependencies]
-async-trait = { workspace = true }
-chrono = { version = "0.4.41", default-features = false, features = [] }
-ic-http-types = { workspace = true }
 ic-cdk = { workspace = true }
-ic-cdk-timers = { workspace = true }
-ic-cdk-macros = { workspace = true }
-ic-base-types = { workspace = true }
-ic-stable-structures = { workspace = true }
 ic-node-rewards-canister-api = { workspace = true }
-candid = { workspace = true }
 ic-node-rewards-canister = { workspace = true }
-ic-nervous-system-common = { workspace = true }
 ic-nervous-system-canisters = { workspace = true }
-serde = { workspace = true }
-ic-protobuf = { workspace = true }
 ic-registry-canister-client = { workspace = true }
-ic-registry-keys = { workspace = true }
-ic-types = { workspace = true }
+ic-nervous-system-timer-task = { workspace = true }
 itertools = { workspace = true }
-mockall = { workspace = true }
-rewards-calculation = { workspace = true }
-rewards-calculation-deprecated = { workspace = true }
-node-provider-rewards-api = { workspace = true }
-serde_cbor = "0.11.2"
-ic-dummy-getrandom-for-wasm = { workspace = true }
+candid = { workspace = true }
+[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown"))'.dependencies]
+getrandom = { version = "0.2", features = ["custom"] }
