--- a/.github/workflows/dre-release.yaml
+++ b/.github/workflows/dre-release.yaml
@@ -27,8 +27,77 @@ jobs:
           echo $STAGING_PRIVATE_KEY_PEM > ~/.config/dfx/identity/bootstrap-super-leader/identity.pem
           bazel test //rs/cli:unit_test --spawn_strategy=local --test_env=HOME=/home/runner
 
-  release:
+  build-macos:
     needs: [test]
+    runs-on: macos-14
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Determine Rust toolchain from rust-toolchain.toml
+        id: rust
+        run: |
+          set -euo pipefail
+          ver=$(awk -F\" '/^channel =/ {print $2}' rust-toolchain.toml)
+          if [ -z "$ver" ]; then
+            echo "Failed to parse Rust toolchain channel from rust-toolchain.toml" >&2
+            exit 1
+          fi
+          echo "toolchain=$ver" >> "$GITHUB_OUTPUT"
+
+      - name: Set up Rust toolchain
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: ${{ steps.rust.outputs.toolchain }}
+
+      - name: Install protoc (protobuf) and export env
+        run: |
+          set -euo pipefail
+          brew update
+          brew install protobuf
+          prefix=$(brew --prefix protobuf)
+          echo "PROTOC=$prefix/bin/protoc" >> "$GITHUB_ENV"
+          echo "PROTOC_INCLUDE=$prefix/include" >> "$GITHUB_ENV"
+          "$prefix/bin/protoc" --version
+
+      - name: Add Rust targets
+        run: |
+          set -euo pipefail
+          rustup target add aarch64-apple-darwin x86_64-apple-darwin
+
+      - name: Build dre (aarch64-apple-darwin)
+        run: |
+          set -euo pipefail
+          cargo build --release -p dre --target aarch64-apple-darwin
+
+      - name: Upload macOS aarch64 artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dre-aarch64-apple-darwin
+          path: target/aarch64-apple-darwin/release/dre
+          if-no-files-found: error
+
+      - name: Build dre (x86_64-apple-darwin) via Apple Silicon cross-linker
+        run: |
+          set -euo pipefail
+          export SDKROOT=$(xcrun --sdk macosx --show-sdk-path)
+          export MACOSX_DEPLOYMENT_TARGET=11.0
+          export CC_x86_64_apple_darwin="$(xcrun -f clang)"
+          export CXX_x86_64_apple_darwin="$(xcrun -f clang++)"
+          export CARGO_TARGET_X86_64_APPLE_DARWIN_LINKER="$(xcrun -f clang)"
+          export RUSTFLAGS="-C link-arg=-target -C link-arg=x86_64-apple-macos11.0 ${RUSTFLAGS:-}"
+          cargo build --release -p dre --target x86_64-apple-darwin
+
+      - name: Upload macOS x86_64 artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dre-x86_64-apple-darwin
+          path: target/x86_64-apple-darwin/release/dre
+          if-no-files-found: error
+
+  release:
+    needs: [test, build-macos]
     runs-on:
       labels: dre-runner-custom
     container: ghcr.io/dfinity/dre/actions-runner:6413f2909a49329ecbf5371ee7ddf07a9799b625
@@ -76,17 +145,34 @@ jobs:
       - name: Build artifacts
         shell: bash
         run: |
-          rustup target add x86_64-apple-darwin
-          rustup target add aarch64-apple-darwin
           CARGO_BAZEL_REPIN=true bazel build --config=ci //rs/cli:dre
-          cargo cross-x86
-          cargo cross-aarch
 
           mkdir -p release/artifacts
           cp --dereference bazel-out/k8-opt/bin/rs/cli/dre release/artifacts/dre-x86_64-unknown-linux
-          cp target/x86_64-apple-darwin/release/dre release/artifacts/dre-x86_64-apple-darwin
-          cp target/aarch64-apple-darwin/release/dre release/artifacts/dre-aarch64-apple-darwin
 
+      - name: Download macOS x86_64 artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dre-x86_64-apple-darwin
+          path: release/artifacts/
+
+      - name: Rename macOS x86_64 artifact
+        shell: bash
+        run: mv release/artifacts/dre release/artifacts/dre-x86_64-apple-darwin
+
+      - name: Download macOS aarch64 artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dre-aarch64-apple-darwin
+          path: release/artifacts/
+
+      - name: Rename macOS aarch64 artifact
+        shell: bash
+        run: mv release/artifacts/dre release/artifacts/dre-aarch64-apple-darwin
+
+      - name: Generate changelog
+        shell: bash
+        run: |
           git cliff --current --sort newest > release/CHANGELOG.md
 
       - name: "🆕 📢 Prepare release"
