--- a/cliff.toml
+++ b/cliff.toml
@@ -26,9 +26,11 @@ body = """
     ### {{ group | upper_first }}
     {% for commit in commits %}
         - {{ commit.message | split(pat="\n") | first | upper_first | trim }} ([{{ commit.id | truncate(length=7, end="") }}](https://github.com/dfinity/dre/commit/{{ commit.id }}) by {{ commit.author.name }})\
-          {% for footer in commit.footers -%}
-            , {{ footer.token }}{{ footer.separator }}{{ footer.value }}\
-          {% endfor %}\
+          {% if commit.footers -%}
+            {% for footer in commit.footers -%}
+              , {{ footer.token }}{{ footer.separator }}{{ footer.value }}\
+            {% endfor %}\
+          {% endif %}\
     {% endfor %}
 {% endfor %}\n
 """
