--- a/release-index.yaml
+++ b/release-index.yaml
@@ -8,6 +8,10 @@
 #         rc_name: <reference RC name>
 #         name: <version name>
 releases:
+  - rc_name: rc--2025-11-20_03-21
+    versions:
+      - name: base
+        version: 948d5b9260494ec3e6c9bc9db499f34d52ba6c7f
   - rc_name: rc--2025-11-13_03-24
     versions:
       - name: base
