--- a/Cargo.toml
+++ b/Cargo.toml
@@ -204,6 +204,7 @@ wiremock = "=0.6.4"
 human_bytes = "0.4"
 mockall = "0.13.1"
 csv = "1.3.1"
+similar = "2.7.0"
 
 # dre-canisters dependencies
 ic-cdk = { version = "^0.18.7" }
