--- a/rs/cli/Cargo.toml
+++ b/rs/cli/Cargo.toml
@@ -91,6 +91,7 @@ url = { workspace = true }
 hex = { workspace = true }
 ic-registry-common-proto = { workspace = true }
 base64 = { version = "0.22" }
+similar = { workspace = true }
 
 [dev-dependencies]
 actix-rt = { workspace = true }
